# demo

intel-sgx/attestation-enclave/: Cargo.toml
intel-sgx/attestation-enclave/src/: main.rs
intel-sgx/attestation-tenant/: Cargo.toml
intel-sgx/attestation-tenant/src/: key.rs  main.rs
wasmtime-basic/src/: add.rs  main.rs
wasmtime-wasi-custom/: Cargo.toml
wasmtime-wasi-custom/src/: main.rs
wasmtime-wasi-custom/wasmtime-wasi/: Cargo.toml
wasmtime-wasi-custom/wasmtime-wasi/src/: syscalls.rs
