[package]
name = "attestation-enclave"
version = "0.1.0"
authors = ["Lily Sturmann <lsturman@redhat.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
byteorder = "1"

# Wasmtime dependencies.
cranelift-codegen = { version = "0.36.0", features = ["enable-serde"] }
cranelift-native = "0.36.0"
wasmtime-jit = { git = "https://github.com/CraneStation/wasmtime", package = "wasmtime-jit", rev = "b7d86af0ec6dc6c3d228728f1ce47d0a0033c05f" }
wabt = "0.7"

# The sgx-isa crate allows the use of Fortanix's data structures 
# relating to SGX, ex. Report, TargetInfo. The sgxstd feature
# should be enabled when using std::os::fortanix_sgx functionality,
# ex. ENCLU[EGETKEY] and ENCLU[EREPORT]. Serde_support allows for the
# serialization of Report and Targetinfo structs.
# See more: https://edp.fortanix.com/docs/api/std/os/fortanix_sgx/index.html
[dependencies.sgx-isa]
version = "0.3.1"
features = ["serde_support", "sgxstd"]

[dependencies.mbedtls]
git = "https://github.com/haraldh/rust-mbedtls"
branch = "upstream_bindgen"
package = "mbedtls"
default-features = false
features = ["rdrand", "sgx"]
